# fleet-telemetry-system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  fleet-telemetry-monitoring-service.md  pyproject.toml
.opencode/commands/: rct-apply-batch.md  rct-apply.md  rct-archive.md  rct-batch.md  rct-propose-batch.md  rct-propose-standard.md  rct-propose.md  rct-verify.md
.ratchet/standards/: ai-build-logging.md  tech-stack.md  telemetry-architecture.md
app/: __init__.py  cdc.py  cdc_consumer.py  config.py  db.py  events.py  frontend_api.py  ingestion_api.py  migrate.py  models.py  otel.py  persistence.py  replication_probe.py  watchdog.py
app/migrations/: 0001_create_raw_events.sql  0002_create_vehicle_current_state.sql  0003_create_zone_counts.sql  0004_create_anomalies.sql  0005_extend_current_state.sql  0006_create_vehicles.sql  0007_create_missions.sql  0008_create_maintenance_records.sql  0009_create_cdc_publication.sql
docker/: replica-entrypoint.sh
docker/alloy/: config.alloy
docker/primary-init/: 10-replication-hba.sh
docker/prometheus/: prometheus.yml
docker/tempo/: tempo.yaml
docs/: ADR.md
docs/ai-build-logs/: 08ddfba8-20260616-anomaly-detection-apply.md  08ddfba8-20260616-anomaly-query-endpoint-apply.md  index.md  (+21 more)
k6/: fleet-simulation.js
tests/: test_cdc_otel.py  test_frontend_otel.py  test_ingestion_otel.py  test_otel.py  test_replication_otel.py  test_trace_propagation.py
web/: .dockerignore  Dockerfile  Dockerfile.runtime  index.html  package-lock.json  package.json  vite.config.ts
(+174 files in other folders)
