[project]
name = "fleet-telemetry-system"
version = "0.1.0"
description = "Fleet telemetry monitoring service — persistence layer"
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic>=2.7",
    "fastapi>=0.115",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
